[package]
name = "direct-gui"
version = "0.1.25-alpha.0"
edition = "2018"
authors = ["Thomas Versteeg <thomasversteeg@gmx.com>"]
license = "GPL-3.0"
homepage = "https://github.com/tversteeg/direct-gui"

readme = "README.md"
description = "Simple direct rendering of GUI controls on a buffer"
documentation = "https://docs.rs/direct-gui"

repository = "https://github.com/tversteeg/direct-gui.git"
keywords = ["gui", "gamedev"]
categories = ["gui", "rendering", "game-engines", "multimedia"]

build = "build.rs"

[badges]
travis-ci = {repository = "tversteeg/direct-gui"}

[dependencies]
blit = "0.5.12"
image = "0.23.3"

[[example]]
name = "button"
path = "examples/button.rs"

[[example]]
name = "label"
path = "examples/label.rs"

[[example]]
name = "sprite"
path = "examples/sprite.rs"

[dev-dependencies]
minifb = "0.16.0"

[build-dependencies]
blit = "0.5.12"
image = "0.23.3"
